보물을 깃발로 변경. 보유중인 깃발 수 저장 및 디스플레이. 깃발 획득 후에 맵 상에서 사라지지 않는 버그 해결.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <string name="action_settings">Settings</string>
 
-    <string name="get_treasure">보물 획득</string>
+    <string name="get_flag">깃발 획득</string>
     <string name="open">열기</string>
 
     <string name="meter">m</string>
