--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="get_flag">깃발 획득</string>
     <string name="open">열기</string>
 
-    <string name="meter">m</string>
+    <string name="kilometer">km</string>
     <string name="kcal">kcal</string>
 
     <!--    Permissions    -->
