--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,10 @@
     <string name="open">열기</string>
 
     <string name="kilometer">km</string>
-    <string name="kcal">kcal</string>
-
+    <string name="step">step</string>
+    <string name="speed">km/h</string>
+    <string name="gps_button">위치 초기화</string>
+    <string name="action_rotate">위치 새로고침</string>
     <!--    Permissions    -->
     <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
     <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
