--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,9 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="record">걸음 기록</string>
-    <string name="treasure">보물함</string>
+    <string name="map">지도</string>
     <string name="action_settings">Settings</string>
+    <string name="action_ranking">랭킹</string>
 
     <string name="get_flag">깃발 획득</string>
     <string name="open">열기</string>
